--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,27 @@
 ThesisKey.pem
 ec2.txt
+
+client/Thesis/Podfile
+client/Thesis/Podfile.lock
+client/Thesis/Pods/*
+
+# Xcode
+.DS_Store
+build/
+*.pbxuser
+!default.pbxuser
+*.mode1v3
+!default.mode1v3
+*.mode2v3
+!default.mode2v3
+*.perspectivev3
+!default.perspectivev3
+*.xcworkspace
+!default.xcworkspace
+xcuserdata
+profile
+*.moved-aside
+DerivedData
+.idea/
+# Pods - for those of you who use CocoaPods
+Pods
