--- a/server/logging_config.ini
+++ b/server/logging_config.ini
@@ -2,26 +2,20 @@
 keys=root,sLogger
 
 [handlers]
-keys=consoleHandler,fileHandler
+keys=fileHandler
 
 [formatters]
-keys=fileFormatter,consoleFormatter
+keys=fileFormatter
 
 [logger_root]
 level=DEBUG
-handlers=consoleHandler,fileHandler
+handlers=fileHandler
 
 [logger_sLogger]
 level=DEBUG
-handlers=consoleHandler,fileHandler
+handlers=fileHandler
 qualname=sLogger
 propagate=0
-
-[handler_consoleHandler]
-class=StreamHandler
-level=WARNING
-formatter=consoleFormatter
-args=(sys.stdout,)
 
 [handler_fileHandler]
 class=FileHandler
@@ -31,8 +25,4 @@ args=('info.log',)
 
 [formatter_fileFormatter]
 format=%(asctime)s [%(name)s] %(levelname)s: %(message)s
-datefmt=
-
-[formatter_consoleFormatter]
-format=%(levelname)s - %(message)s
 datefmt=
