--- a/server/logging_config.ini
+++ b/server/logging_config.ini
@@ -2,20 +2,26 @@
 keys=root,sLogger
 
 [handlers]
-keys=fileHandler
+keys=consoleHandler,fileHandler
 
 [formatters]
-keys=fileFormatter
+keys=fileFormatter,consoleFormatter
 
 [logger_root]
 level=DEBUG
-handlers=fileHandler
+handlers=consoleHandler,fileHandler
 
 [logger_sLogger]
 level=DEBUG
-handlers=fileHandler
+handlers=consoleHandler,fileHandler
 qualname=sLogger
 propagate=0
+
+[handler_consoleHandler]
+class=StreamHandler
+level=WARNING
+formatter=consoleFormatter
+args=(sys.stdout,)
 
 [handler_fileHandler]
 class=FileHandler
@@ -25,4 +31,8 @@ args=('info.log',)
 
 [formatter_fileFormatter]
 format=%(asctime)s [%(name)s] %(levelname)s: %(message)s
+datefmt=
+
+[formatter_consoleFormatter]
+format=%(levelname)s - %(message)s
 datefmt=
