--- a/server/logging_config.ini
+++ b/server/logging_config.ini
@@ -19,7 +19,7 @@ propagate=0
 
 [handler_consoleHandler]
 class=StreamHandler
-level=WARNING
+level=DEBUG
 formatter=consoleFormatter
 args=(sys.stdout,)
 
@@ -34,5 +34,5 @@ format=%(asctime)s [%(name)s] %(levelname)s: %(message)s
 datefmt=
 
 [formatter_consoleFormatter]
-format=%(levelname)s - %(message)s
+format=%(asctime)s [%(name)s] %(levelname)s: %(message)s
 datefmt=
