reformat achievement to check new first
refactored structure, added test class

refactored structure, added test cases

reformat achievement to check new first

--- a/.gitignore
+++ b/.gitignore
@@ -22,6 +22,7 @@ xcuserdata
 profile
 *.moved-aside
 DerivedData
+*.xcuserstate
 .idea/
 # Pods - for those of you who use CocoaPods
 Pods
@@ -30,3 +31,6 @@ Pods
 *.log
 restart.sh
 
+server/.cache/*
+server/.tox/*
+config.ini
