reformat achievement to check new first
refactored structure, added test class

--- a/.gitignore
+++ b/.gitignore
@@ -22,6 +22,7 @@ xcuserdata
 profile
 *.moved-aside
 DerivedData
+*.xcuserstate
 .idea/
 # Pods - for those of you who use CocoaPods
 Pods
@@ -29,4 +30,7 @@ Pods
 *.pyc
 *.log
 restart.sh
+
+server/.cache/*
+server/.tox/*
 
