--- a/server/moot/logging_config.ini
+++ b/server/moot/logging_config.ini
@@ -5,7 +5,7 @@ keys=root,sLogger
 keys=consoleHandler,fileHandler
 
 [formatters]
-keys=fileFormatter,consoleFormatter
+keys=consoleFormatter,fileFormatter
 
 [logger_root]
 level=DEBUG
@@ -36,3 +36,6 @@ datefmt=
 [formatter_consoleFormatter]
 format=%(asctime)s [%(name)s] %(levelname)s: %(message)s
 datefmt=
+
+[pytest]
+log_format=%(asctime)s [%(name)s] %(levelname)s: %(message)s
