--- a/server/moot/logging_config.ini
+++ b/server/moot/logging_config.ini
@@ -5,7 +5,7 @@ keys=root,sLogger
 keys=consoleHandler,fileHandler
 
 [formatters]
-keys=consoleFormatter,fileFormatter
+keys=fileFormatter,consoleFormatter
 
 [logger_root]
 level=DEBUG
@@ -27,15 +27,15 @@ args=(sys.stdout,)
 class=FileHandler
 level=DEBUG
 formatter=fileFormatter
-args=('info.log',)
+args=('moot/info.log',)
 
 [formatter_fileFormatter]
-format=%(asctime)s [%(name)24s] %(levelname)s: %(message)s
+format=%(asctime)s [%(name)-18s] %(levelname)s: %(message)s
 datefmt=
 
 [formatter_consoleFormatter]
-format=%(asctime)s [%(name)24s] %(levelname)s: %(message)s
+format=%(asctime)s [%(name)-18s] %(levelname)s: %(message)s
 datefmt=
 
 [pytest]
-log_format=%(asctime)s [%(name)24s] %(levelname)s: %(message)s
+log_format=%(asctime)s [%(name)-18s] %(levelname)s: %(message)s
