--- a/server/moot/logging_config.ini
+++ b/server/moot/logging_config.ini
@@ -30,12 +30,12 @@ formatter=fileFormatter
 args=('moot/info.log',)
 
 [formatter_fileFormatter]
-format=%(asctime)s [%(name)-18s] %(levelname)s: %(message)s
+format=%(asctime)s [%(name)s] %(levelname)8s: %(message)s
 datefmt=
 
 [formatter_consoleFormatter]
-format=%(asctime)s [%(name)-18s] %(levelname)s: %(message)s
+format=%(asctime)s [%(name)s] %(levelname)8s: %(message)s
 datefmt=
 
 [pytest]
-log_format=%(asctime)s [%(name)-18s] %(levelname)s: %(message)s
+log_format=%(asctime)s [%(name)s] %(levelname)8s: %(message)s
