--- a/server/moot/logging_config.ini
+++ b/server/moot/logging_config.ini
@@ -31,11 +31,12 @@ args=('moot/info.log',)
 
 [formatter_fileFormatter]
 format=%(asctime)s [%(name)s] %(levelname)8s: %(message)s
-datefmt=
+datefmt=%Y-%m-%d %H:%M:%S
 
 [formatter_consoleFormatter]
 format=%(asctime)s [%(name)s] %(levelname)8s: %(message)s
-datefmt=
+datefmt=%Y-%m-%d %H:%M:%S
 
 [pytest]
 log_format=%(asctime)s [%(name)s] %(levelname)8s: %(message)s
+datefmt=%Y-%m-%d %H:%M:%S
