--- a/moot/moot/logging_config.ini
+++ b/moot/moot/logging_config.ini
@@ -39,4 +39,4 @@ datefmt=%Y-%m-%d %H:%M:%S
 
 [pytest]
 log_format=%(asctime)s [%(name)s] %(levelname)8s: %(message)s
-datefmt=%Y-%m-%d %H:%M:%S
+log_date_format=%Y-%m-%d %H:%M:%S
