--- a/moot/moot/logging_config.ini
+++ b/moot/moot/logging_config.ini
@@ -30,13 +30,16 @@ formatter=fileFormatter
 args=('moot/info.log',)
 
 [formatter_fileFormatter]
-format=%(asctime)s [%(name)s] %(levelname)8s: %(message)s
+class=colorlog.ColoredFormatter
+format=%(asctime)s [%(name)s] %(reset)s%(levelname)8s: %(message)s
 datefmt=%Y-%m-%d %H:%M:%S
 
 [formatter_consoleFormatter]
-format=%(asctime)s [%(name)s] %(levelname)8s: %(message)s
+class=colorlog.ColoredFormatter
+format=%(asctime)s [%(name)s] %(reset)s%(levelname)8s: %(message)s
 datefmt=%Y-%m-%d %H:%M:%S
 
 [pytest]
-log_format=%(asctime)s [%(name)s] %(levelname)8s: %(message)s
+log_format=%(asctime)s [%(name)s] %(reset)s%(levelname)8s: %(message)s
 log_date_format=%Y-%m-%d %H:%M:%S
+
