--- a/client/Thesis/Thesis/Info.plist
+++ b/client/Thesis/Thesis/Info.plist
@@ -68,6 +68,7 @@
 		<string>Raleway-Medium.ttf</string>
 		<string>Raleway-Regular.ttf</string>
 		<string>Raleway-SemiBold.ttf</string>
+		<string>Raleway-Thin.ttf</string>
 	</array>
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
