--- a/client/Thesis/Thesis/Info.plist
+++ b/client/Thesis/Thesis/Info.plist
@@ -49,6 +49,8 @@
 		<string>fb-messenger-api</string>
 		<string>fbauth2</string>
 		<string>fbshareextension</string>
+        <string>instagram</string>
+        <string>googleplus</string>
 	</array>
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
