--- a/client/Thesis/Thesis/Info.plist
+++ b/client/Thesis/Thesis/Info.plist
@@ -62,6 +62,7 @@
 	<key>UIAppFonts</key>
 	<array>
 		<string>Anonymous.ttf</string>
+        <string>DroidSansMono.ttf</string>
 		<string>Raleway-Black.ttf</string>
 		<string>Raleway-Bold.ttf</string>
 		<string>Raleway-ExtraBold.ttf</string>
